prevent cell clipping

--- a/pixplot/web/assets/css/style.css
+++ b/pixplot/web/assets/css/style.css
@@ -83,10 +83,10 @@ select:disabled {
 
 #canvas-target {
   position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  top: -30px;
+  right: -30px;
+  bottom: -30px;
+  left: -30px;
 }
 
 #lod-canvas {
